--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -400,7 +400,7 @@
       <a class="uq-card__link__outer" href="#">Card title</a>
       <div class="uq-card__image__wrapper">
         <div class="uq-card__image">
-          <img src="https://campuses.uq.edu.au/files/9492/stlucia-card.jpg" alt="Card image description">
+          <img src="../images/uq-image-stlucia-campus.jpg" alt="Card image description">
         </div>
       </div>
       <div class="uq-card__content__wrapper">
@@ -423,7 +423,7 @@
       <a class="uq-card__link__outer" href="#">Card title</a>
       <div class="uq-card__image__wrapper">
         <div class="uq-card__image">
-          <img src="https://campuses.uq.edu.au/files/9492/stlucia-card.jpg" alt="Card image description">
+          <img src="../images/uq-image-stlucia-campus.jpg" alt="Card image description">
         </div>
       </div>
       <div class="uq-card__content__wrapper">
@@ -446,7 +446,7 @@
       <a class="uq-card__link__outer" href="#">Card title</a>
       <div class="uq-card__image__wrapper">
         <div class="uq-card__image">
-          <img src="https://campuses.uq.edu.au/files/9492/stlucia-card.jpg" alt="Card image description">
+          <img src="../images/uq-image-stlucia-campus.jpg" alt="Card image description">
         </div>
       </div>
       <div class="uq-card__content__wrapper">
@@ -469,7 +469,7 @@
       <a class="uq-card__link__outer" href="#">Card title</a>
       <div class="uq-card__image__wrapper">
         <div class="uq-card__image">
-          <img src="https://campuses.uq.edu.au/files/9492/stlucia-card.jpg" alt="Card image description">
+          <img src="../images/uq-image-stlucia-campus.jpg" alt="Card image description">
         </div>
       </div>
       <div class="uq-card__content__wrapper">
@@ -498,7 +498,7 @@
       <a class="uq-card__link__outer" href="#">Card title</a>
       <div class="uq-card__image__wrapper">
         <div class="uq-card__image">
-          <img src="https://campuses.uq.edu.au/files/9749/gatton-card2.jpg" alt="Card image description">
+          <img src="../images/uq-image-gatton-campus.jpg" alt="Card image description">
         </div>
       </div>
       <div class="uq-card__content__wrapper">
@@ -519,7 +519,7 @@
       <a class="uq-card__link__outer" href="#">Card title</a>
       <div class="uq-card__image__wrapper">
         <div class="uq-card__image">
-          <img src="https://campuses.uq.edu.au/files/9749/gatton-card2.jpg" alt="Card image description">
+          <img src="../images/uq-image-gatton-campus.jpg" alt="Card image description">
         </div>
       </div>
       <div class="uq-card__content__wrapper">
@@ -540,7 +540,7 @@
       <a class="uq-card__link__outer" href="#">Card title</a>
       <div class="uq-card__image__wrapper">
         <div class="uq-card__image">
-          <img src="https://campuses.uq.edu.au/files/9749/gatton-card2.jpg" alt="Card image description">
+          <img src="../images/uq-image-gatton-campus.jpg" alt="Card image description">
         </div>
       </div>
       <div class="uq-card__content__wrapper">
@@ -561,7 +561,7 @@
       <a class="uq-card__link__outer" href="#">Card title</a>
       <div class="uq-card__image__wrapper">
         <div class="uq-card__image">
-          <img src="https://campuses.uq.edu.au/files/9749/gatton-card2.jpg" alt="Card image description">
+          <img src="../images/uq-image-gatton-campus.jpg" alt="Card image description">
         </div>
       </div>
       <div class="uq-card__content__wrapper">
@@ -588,7 +588,7 @@
       <a class="uq-card__link__outer" href="#">Card title</a>
       <div class="uq-card__image__wrapper">
         <div class="uq-card__image">
-          <img src="https://campuses.uq.edu.au/files/9480/herston-card.jpg" alt="Card image description">
+          <img src="../images/uq-image-herston-campus.jpg" alt="Card image description">
         </div>
       </div>
       <div class="uq-card__content__wrapper">
@@ -609,7 +609,7 @@
       <a class="uq-card__link__outer" href="#">Card title</a>
       <div class="uq-card__image__wrapper">
         <div class="uq-card__image">
-          <img src="https://campuses.uq.edu.au/files/9480/herston-card.jpg" alt="Card image description">
+          <img src="../images/uq-image-herston-campus.jpg" alt="Card image description">
         </div>
       </div>
       <div class="uq-card__content__wrapper">
@@ -630,7 +630,7 @@
       <a class="uq-card__link__outer" href="#">Card title</a>
       <div class="uq-card__image__wrapper">
         <div class="uq-card__image">
-          <img src="https://campuses.uq.edu.au/files/9480/herston-card.jpg" alt="Card image description">
+          <img src="../images/uq-image-herston-campus.jpg" alt="Card image description">
         </div>
       </div>
       <div class="uq-card__content__wrapper">
@@ -651,7 +651,7 @@
       <a class="uq-card__link__outer" href="#">Card title</a>
       <div class="uq-card__image__wrapper">
         <div class="uq-card__image">
-          <img src="https://campuses.uq.edu.au/files/9480/herston-card.jpg" alt="Card image description">
+          <img src="../images/uq-image-herston-campus.jpg" alt="Card image description">
         </div>
       </div>
       <div class="uq-card__content__wrapper">
