icon: render SCSS to emit component to load all icons in default colour

--- a/packages/icon/src/scss/_component.scss
+++ b/packages/icon/src/scss/_component.scss
@@ -1,13 +1,12 @@
-@use 'global' as *;
+@use '_build/icons-emit';
 
 .uq-icon {
-  width: 1.5rem;
-  height: 1.5rem;
-  stroke: currentColor;
-  fill: currentColor;
-  vertical-align: text-top;
-  background-position: center;
-  display: inline-block;
+  background-position: center center;
+  background-repeat: no-repeat;
   box-sizing: border-box;
+  display: inline-block;
+  height: 1em;
   line-height: 100%;
+  vertical-align: text-top;
+  width: 1em;
 }
