--- a/packages/storybook-html/src/components/alert/alert.html
+++ b/packages/storybook-html/src/components/alert/alert.html
@@ -1,116 +1,116 @@
-<div class="alert alert--default" role="alert">
-  <div class="alert__message">
+<div class="uq-alert uq-alert--default" role="alert">
+  <div class="uq-alert__message">
     Lorem ipsum dolor sit amet, <a href="#">consectetur adipiscing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--default</strong>.
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
-<div class="alert alert--info" role="alert">
-  <div class="alert__message">
+<div class="uq-alert uq-alert--info" role="alert">
+  <div class="uq-alert__message">
     Lorem ipsum dolor sit amet, <a href="#">consectetur adipiscing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--info</strong>.
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
-<div class="alert alert--success" role="alert">
-  <div class="alert__message">
+<div class="uq-alert uq-alert--success" role="alert">
+  <div class="uq-alert__message">
     Lorem ipsum dolor sit amet, <a href="#">consectetur adipiscing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--success</strong>.
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
-<div class="alert alert--warning" role="alert">
-  <div class="alert__message">
+<div class="uq-alert uq-alert--warning" role="alert">
+  <div class="uq-alert__message">
     Lorem ipsum dolor sit amet, <a href="#">consectetur adipiscing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--warning</strong>.
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
-<div class="alert alert--danger" role="alert">
-  <div class="alert__message">
+<div class="uq-alert uq-alert--danger" role="alert">
+  <div class="uq-alert__message">
     Lorem ipsum dolor sit amet, <a href="#">consectetur adipiscing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--danger</strong>.
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
 <br/>
 
-<div class="alert alert--default alert--has-action" role="alert">
-  <div class="alert__message">
+<div class="uq-alert uq-alert--default uq-alert--has-action" role="alert">
+  <div class="uq-alert__message">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
     incididunt ut labore et dolore magna aliqua. <strong>This alert has a button action!</strong> Exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
   </div>
-  <div class="alert__action">
+  <div class="uq-alert__action">
     <a href="#" title="Okay" class="uq-button">Okay</a>
     <a href="#" title="Okay" class="uq-button uq-button--text">Find out more</a>
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
-<div class="alert alert--warning alert--has-action" role="alert">
-  <div class="alert__message">
+<div class="uq-alert uq-alert--warning uq-alert--has-action" role="alert">
+  <div class="uq-alert__message">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>I have an expanded button!</strong>
   </div>
-  <div class="alert__action">
+  <div class="uq-alert__action">
     <a href="#" title="Okay" class="uq-button uq-button--expand">Okay</a>
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
 <br/>
 
-<div class="alert alert--warning alert--has-action" role="alert">
-  <div class="alert__container">
-    <div class="alert__message">
+<div class="uq-alert uq-alert--warning uq-alert--has-action" role="alert">
+  <div class="uq-alert__container">
+    <div class="uq-alert__message">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>My contents are contained within a fixed content width. I also have a button!</strong>
     </div>
-    <div class="alert__action">
+    <div class="uq-alert__action">
       <a href="#" title="Okay" class="uq-button uq-button--secondary uq-button--expand">Okay</a>
     </div>
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
-<div class="alert alert--info alert--has-action alert--no-close" role="alert">
-  <div class="alert__container">
-    <div class="alert__message">
+<div class="uq-alert uq-alert--info uq-alert--has-action uq-alert--no-close" role="alert">
+  <div class="uq-alert__container">
+    <div class="uq-alert__message">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>I have a button but NO close (&times;).</strong>
     </div>
-    <div class="alert__action">
+    <div class="uq-alert__action">
       <a href="#" title="Okay" class="uq-button uq-button--outline uq-button--expand">Okay</a>
     </div>
   </div>
 </div>
-<div class="alert alert--default alert--no-close" role="alert">
-  <div class="alert__container">
-    <div class="alert__message">
+<div class="uq-alert uq-alert--default uq-alert--no-close" role="alert">
+  <div class="uq-alert__container">
+    <div class="uq-alert__message">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>I have NO close (&times;).</strong>
     </div>
   </div>
 </div>
 <br/>
 
-<div class="alert alert--default alert--slim" role="alert">
-  <div class="alert__message">
+<div class="uq-alert uq-alert--default uq-alert--slim" role="alert">
+  <div class="uq-alert__message">
     Lorem ipsum dolor sit amet, <strong>I am a --slim alert.</strong>, sed do eiusmod tempor 
     incididunt ut labore et dolore magna aliqua.
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
 <br/>
-<div class="alert alert--success alert--slim" role="alert">
-  <div class="alert__message">
+<div class="uq-alert uq-alert--success uq-alert--slim" role="alert">
+  <div class="uq-alert__message">
     Lorem ipsum dolor sit amet.
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
 <br/>
-<div class="alert alert--danger alert--slim" role="alert">
-  <div class="alert__message">
+<div class="uq-alert uq-alert--danger uq-alert--slim" role="alert">
+  <div class="uq-alert__message">
     Lorem ipsum dolor sit amet.
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
 <br/>
-<div class="alert alert--info alert--slim alert--has-action" role="alert">
-  <div class="alert__message">
+<div class="uq-alert uq-alert--info uq-alert--slim uq-alert--has-action" role="alert">
+  <div class="uq-alert__message">
     Lorem ipsum dolor sit amet.
   </div>
-  <div class="alert__action">
+  <div class="uq-alert__action">
     <a href="#" title="Okay" class="uq-button uq-button--small">Activate</a>
     <a href="#" title="Okay" class="uq-button uq-button--small uq-button--text">Remind me later</a>
   </div>
-  <a href="javascript:void(0)" class="alert__close">&times;</a>
+  <a href="javascript:void(0)" class="uq-alert__close">&times;</a>
 </div>
