Pane prefix uq-

--- a/packages/pane/src/scss/_component.scss
+++ b/packages/pane/src/scss/_component.scss
@@ -1,73 +1,26 @@
 @use '@uqds/core/src/scss/global' as core;
 @use 'global' as *;
 
-//
 // Panes: Blocks of colour with padding around content.
 //
 // Variants:
-// .pane--shaded - Adds grey background.
-// .pane--white - Adds white background.
-// .pane--outline - Adds thin border on all sides.
-// .pane--ruled - Adds thin top and bottom border.
-// .pane--vertical-spacing - Adds top and bottom margin to offset panes inline with other content.
-// .pane--dark-tint - Adds semi-transparent black background.
-// .pane--has-footer - Minor adjustments to markup allow a shaded footer to be added within pane.
+// .uq-pane--shaded - Adds grey background.
+// .uq-pane--white - Adds white background.
+// .uq-pane--outline - Adds thin border on all sides.
+// .uq-pane--ruled - Adds thin top and bottom border.
+// .uq-pane--vertical-spacing - Adds top and bottom margin to offset panes inline with other content.
+// .uq-pane--dark-tint - Adds semi-transparent black background.
+// .uq-pane--has-footer - Minor adjustments to markup allow a shaded footer to be added within pane.
 //
-// .pane-grid--shaded - Adds grey background to all child panes.
-// .pane-grid--white - Adds white background to all child panes.
-// .pane-grid--outline - Adds thin border on all sides to all child panes.
-// .pane-grid--ruled - Adds thin top and bottom border to all child panes.
-// .pane-grid--vertical-spacing - Adds top and bottom margin to all child panes to offset panes inline with other content.
-// .pane-grid--dark-tint - Adds semi-transparent black background  to all child panes.
-
-@mixin pane-shaded {
-  background: $pane-shaded-bg;
-}
-
-@mixin pane-white {
-  background: core.$uq-white;
-}
-
-@mixin pane-outline {
-  border: 2px solid $pane-border;
-}
-
-@mixin pane-ruled {
-  border-bottom: 2px solid $pane-border;
-  border-top: 2px solid $pane-border;
-}
-
-@mixin pane-vertical-spacing {
-  margin: core.$space-lg core.$space-none;
-}
-
-@mixin pane-dark-tint {
-  @extend %light-palette;
-  background-color: core.$uq-black;
-  background-color: rgba(core.$uq-black, .65);
-
-  .pane__title {
-    @extend %light-palette;
-  }
-}
-
-@mixin pane-has-footer {
-  padding: core.$space-none;
-
-  .pane {
-    &__content {
-      padding: core.$space-md core.$space-md core.$space core.$space-md; //1.8rem 1.8rem 1rem 1.8rem
-    }
-
-    &__footer {
-      background-color: $pane-shaded-bg;
-      padding: core.$space-md; //1.8rem;
-    }
-  }
-}
+// .uq-pane-grid--shaded - Adds grey background to all child panes.
+// .uq-pane-grid--white - Adds white background to all child panes.
+// .uq-pane-grid--outline - Adds thin border on all sides to all child panes.
+// .uq-pane-grid--ruled - Adds thin top and bottom border to all child panes.
+// .uq-pane-grid--vertical-spacing - Adds top and bottom margin to all child panes to offset panes inline with other content.
+// .uq-pane-grid--dark-tint - Adds semi-transparent black background  to all child panes.
 
 %pane,
-.pane {
+.uq-pane {
   padding: core.$space-md; //1.8rem;
   margin-bottom: core.$space-md; //1.5rem;
 
@@ -97,14 +50,14 @@
 
   &--has-footer {
     @include pane-has-footer;
-    &.pane--shaded {
-      .pane__footer {
+    &.uq-pane--shaded {
+      .uq-pane__footer {
         background-color: darken($pane-shaded-bg, 5%);
       }
     }
 
-    &.pane--dark-tint {
-      .pane__footer {
+    &.uq-pane--dark-tint {
+      .uq-pane__footer {
         background-color: core.$uq-black;
         background-color: rgba(core.$uq-black, 0.3);
       }
@@ -129,47 +82,47 @@
 }
 
 // Pane grid
-.pane-grid {
+.uq-pane-grid {
   &--shaded {
-    .pane {
+    .uq-pane {
       @include pane-shaded;
     }
 
-    .pane__footer {
+    .uq-pane__footer {
       background-color: darken($pane-shaded-bg, 5%);
     }
   }
 
   &--white {
-    .pane {
+    .uq-pane {
       @include pane-white;
     }
   }
 
   &--outline {
-    .pane {
+    .uq-pane {
       @include pane-outline;
     }
   }
 
   &--ruled {
-    .pane {
+    .uq-pane {
       @include pane-ruled;
     }
   }
 
   &--vertical-spacing {
-    .pane {
+    .uq-pane {
       @include pane-vertical-spacing;
     }
   }
 
   &--dark-tint {
-    .pane {
+    .uq-pane {
       @include pane-dark-tint;
     }
 
-    .pane__footer {
+    .uq-pane__footer {
       background-color: core.$uq-black;
       background-color: rgba(core.$uq-black, .3);
     }
@@ -178,7 +131,7 @@
 
 // Fix for 3 column layout with more than 3 panes at medium breakpoint going
 // out of alignment due to .row's
-.pane-grid-wrapper {
+.uq-pane-grid-wrapper {
   .row {
     &::before,
     &::after {
