--- a/packages/pane/src/scss/_global.scss
+++ b/packages/pane/src/scss/_global.scss
@@ -3,3 +3,49 @@
 $pane-border: core.$uq-neutral-light40; //eee;
 $pane-shaded-bg: core.$uq-neutral-light20; //f5f5f5;
 $pane-title-color: core.$uq-purple;
+
+@mixin pane-shaded {
+    background: $pane-shaded-bg;
+  }
+  
+  @mixin pane-white {
+    background: core.$uq-white;
+  }
+  
+  @mixin pane-outline {
+    border: 2px solid $pane-border;
+  }
+  
+  @mixin pane-ruled {
+    border-bottom: 2px solid $pane-border;
+    border-top: 2px solid $pane-border;
+  }
+  
+  @mixin pane-vertical-spacing {
+    margin: core.$space-lg core.$space-none;
+  }
+  
+  @mixin pane-dark-tint {
+    @extend %light-palette;
+    background-color: core.$uq-black;
+    background-color: rgba(core.$uq-black, .65);
+  
+    .uq-pane__title {
+        @extend %light-palette;
+    }
+  }
+  
+  @mixin pane-has-footer {
+    padding: core.$space-none;
+  
+    .uq-pane {
+        &__content {
+            padding: core.$space-md core.$space-md core.$space core.$space-md; //1.8rem 1.8rem 1rem 1.8rem
+        }
+  
+        &__footer {
+            background-color: $pane-shaded-bg;
+            padding: core.$space-md; //1.8rem;
+        }
+    }
+  }
