icon, storybook-html: style icons and docs

--- a/packages/core/src/scss/_partials/_colour-constants.scss
+++ b/packages/core/src/scss/_partials/_colour-constants.scss
@@ -78,7 +78,7 @@ $dark-palette-bg: $uq-neutral-dark60;
 // Overlays
 $dark-tint-bg: $uq-neutral-dark60;
 
-// Filters
+// Filters from #000000
 $filter-text: invert(0%) sepia(72%) saturate(588%) hue-rotate(348deg) brightness(115%) contrast(81%);
 $filter-primary: invert(20%) sepia(34%) saturate(1979%) hue-rotate(239deg) brightness(97%) contrast(107%);
 $filter-secondary: invert(35%) sepia(80%) saturate(952%) hue-rotate(181deg) brightness(94%) contrast(90%);
