--- a/packages/icon/src/scss/_component.scss
+++ b/packages/icon/src/scss/_component.scss
@@ -1,12 +1,32 @@
 @use '_build/icons-emit';
+@use 'global' as *;
 
 .uq-icon {
-  background-position: center center;
-  background-repeat: no-repeat;
-  box-sizing: border-box;
   display: inline-block;
-  height: 1em;
-  line-height: 100%;
-  vertical-align: text-top;
-  width: 1em;
+  height: 1.5rem;
+  width: 1.5rem;
+  vertical-align: middle;
+
+  &::before {
+    content: '';
+    display: block;
+    filter: $icon-primary-filter;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+  }
+
+  &--light {
+    &::before {
+      filter: $icon-light-filter;
+    }
+  }
+
+  &--text {
+    &::before {
+      filter: $icon-light-filter;
+    }
+  }
 }
